improve student survey selection

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -276,6 +276,7 @@ jQuery(document).ready(function() {
 		$(this).html(oh);
 		if (i > 7) $(this).trigger('change');
 	});
+	$('.qualificationselector').first().val('Fourth year');
 
 	function checkKeys(e){
 		 e = e || event;
