--- a/portality/templates/leaps/survey/complete.html
+++ b/portality/templates/leaps/survey/complete.html
@@ -19,7 +19,7 @@
 		        <p>Our staff will review the information you have provided, and may contact you if further details are required.</p>
 
 
-						<p><b>Your help please - complete below survey on how you feel about applying to uni / college (and enter prize draw for £10 Love2Shop voucher!)</b></p>
+						<p><b>Your help please - complete below survey on how you feel about applying to uni / college (and enter prize draw for £30 Love2Shop voucher!)</b></p>
 
 						<p>LEAPS want to explore the effectiveness of the LEAPS Pre-UCAS 1:1 Interview,
 						and we ask for your help to do this! We invite you to complete this short 
@@ -30,7 +30,7 @@
 						questionnaire allows us to make sure LEAPS support is as effective as possible for
 						future LEAPS pupils. You can complete the questionnaire here:</p>
 
-						<p><a href="https://edinburgh.onlinesurveys.ac.uk/leaps-pre-ucas-interviews-2023-pre-interview">https://edinburgh.onlinesurveys.ac.uk/leaps-pre-ucas-interviews-2023-pre-interview</a></p>
+						<p><a href="https://app.onlinesurveys.jisc.ac.uk/s/edinburgh/leaps-pre-ucas-interviews-2024-pre-interview-questionnaire">https://app.onlinesurveys.jisc.ac.uk/s/edinburgh/leaps-pre-ucas-interviews-2024-pre-interview-questionnaire</a></p>
 
 		        <p>If you are completing this form using a PC in a public place, you should now take the recommended precautions to ensure nobody 
 		        else can access your session and the information you submitted. For example, close the internet browser and log off the PC.</p> 
