--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -154,14 +154,16 @@ td > p {
                 <p>(This form has already been completed - information is available below for reference only, changes can no longer be saved.)</p>
                 {% endif %}{% endif %}{% endif %}
 
-                {% if dontsave != 1 %}
                 <p>Reference notes (for LEAPS staff to share additional details that may be relevant at interview):</p>
-                <textarea class="biggerfield" name="pre_interview_notes" {% if not current_user.view_admin %}disabled="disabled"{% endif %}>
-                    {% if student %}{% if student.data.pre_interview_notes %}{{ student.data.pre_interview_notes }}{% endif %}{% endif %}
-                </textarea>
-                {% if current_user.view_admin %}
-                <br><input type="submit" name="submit_reference_notes" class="btn btn-primary" value="Save reference notes">
-                {% endif %}
+                {% if dontsave != 1 %}
+                    <textarea class="biggerfield" name="pre_interview_notes" {% if not current_user.view_admin %}disabled="disabled"{% endif %}>
+                        {% if student %}{% if student.data.pre_interview_notes %}{{ student.data.pre_interview_notes }}{% endif %}{% endif %}
+                    </textarea>
+                    {% if current_user.view_admin %}
+                    <br><input type="submit" name="submit_reference_notes" class="btn btn-primary" value="Save reference notes">
+                    {% endif %}
+                {% else %}
+                    {% if student.data.pre_interview_notes %}{{ student.data.pre_interview_notes }}{% else %}No reference notes{% endif %}
                 {% endif %}
 
             </div>
