jquery on admin import subjects

--- a/portality/templates/leaps/admin/import.html
+++ b/portality/templates/leaps/admin/import.html
@@ -5,7 +5,7 @@
 <script>
 jQuery(document).ready(function() {
     if (window.location.href.indexOf("institution") > -1) {
-        $('#institution').val(window.location.href.split("institution=")[1]);
+        $('#institution').val(decodeURIComponent(window.location.href.split("institution=")[1]));
     }
 }):
 </script>
