--- a/portality/templates/leaps/admin/import.html
+++ b/portality/templates/leaps/admin/import.html
@@ -4,7 +4,7 @@
 
 <script>
 jQuery(document).ready(function() {
-    if (window.location.href.indexOf("institution") > -1) {
+    if (window.location.href.indexOf("institution=") > -1) {
         //$('#institution').val(decodeURIComponent(window.location.href.split("institution=")[1]));
         $('#institution option[value="' + decodeURIComponent(window.location.href.split("institution=")[1]) + '"]').attr('selected','selected'); //.change();
     }
