interview form hide save after completion

--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -409,7 +409,7 @@ td > p {
 
 
                     {% if student %}{% if student.data.interview %}{% if student.data.interview.completed_date %}
-                    <p>(This interview has already been completed - information is available here for reference only, changes can no longer be saved.)</p>
+                    <tr><td><p>(This interview has already been completed - information is available here for reference only, changes can no longer be saved.)</p></td></tr>
                     {% endif %}{% endif %}{% endif %}
                     {% if student %}{% if student.data.interview %}{% if student.data.interview.completed_date %}
                     <tr style="display: none;">
