--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -154,9 +154,7 @@ td > p {
                 {% endif %}{% endif %}{% endif %}
 
                 <p>Reference notes (for LEAPS staff to share additional details that may be relevant at interview):</p>
-                <textarea class="biggerfield" name="pre_interview_notes" {% if not current_user.view_admin %}disabled="disabled"{% endif %}>
-                    {% if student %}{% if student.data.pre_interview_notes %}{{ student.data.pre_interview_notes }}{% endif %}{% endif %}
-                </textarea>
+                <textarea class="biggerfield" name="pre_interview_notes" {% if not current_user.view_admin %}disabled="disabled"{% endif %}>{% if student %}{% if student.data.pre_interview_notes %}{{ student.data.pre_interview_notes }}{% endif %}{% endif %}</textarea>
                 {% if current_user.view_admin %}
                 <br><input type="submit" name="submit_reference_notes" class="btn btn-primary" value="Save reference notes">
                 {% endif %}
@@ -352,7 +350,7 @@ td > p {
                 		<td><input name="application_institution" type="hidden" value="{{app.institution}}" style="min-width:170px;">{{app.institution}}</td>
                 		<td><input name="application_subject" type="hidden" value="{{app.subject}}" style="min-width:170px;">{{app.subject}}</td>
                 		<td><input name="application_level" type="hidden" value="{{app.level}}" style="min-width:100px;">{{app.level}}</td>
-                		<td><a class="btn btn-warning delete-row" style="margin:-10px 47px 0 0;" href="#">delete</a></td>
+                		{% if not student.data.interview.completed_date %}<td><a class="btn btn-warning delete-row" style="margin:-10px 47px 0 0;" href="#">delete</a></td>{% endif %}
                     </tr>
                     <tr><td><br></td></tr>
                     {% endfor %}{% endif %}{% endif %}{% endif %}
