--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -260,12 +260,15 @@ jQuery(document).ready(function() {
 			type: 'POST',
 			url: '/admin/student/{{record.id}}/assign/' + $('#interviewer').val(),
 			success: function() {
+					$('#status').val('allocated_to_interviewer');
 			    $('#interviewer_saved').show();
 			    setTimeout(function() { $('#interviewer_saved').hide(); }, 3000);
 			}
 		});
     }
+		{% if not record.data.interviewer or not record.data.interview or not record.data.interview.emailed_date %}
     $('#interviewer').bind('change',interviewer);
+		{% endif %}
 
     var promptsave = function() {
         $('#triggersave').removeClass('btn-success').addClass('btn-warning');
@@ -621,7 +624,7 @@ fieldset{
 
                     <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Status</td>
-                		<td><select name="status">
+                		<td><select id="status" name="status">
                 		    {% if record %}{% if record.data.status not in ["new", "not_eligible_interviewed", "not_eligible_not_interviewed", "not_applying_interviewed", "not_applying_not_interviewed", "allocated_to_interviewer", "awaiting_interview", "interviewed", "absent", "query", "paes_requested", "paes_in_progress", "paes_complete", "complete"] %}<option style="color:red;" selected="selected">{{record.data.status}}</option>{% endif %}{% endif %}
                 		    <option>new</option>
               		        <option{% if record %}{% if record.data.status == "not_eligible_interviewed" %} selected="selected"{% endif %}{% endif %}>not_eligible_interviewed</option>
